--- a/index.html
+++ b/index.html
@@ -4,47 +4,78 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Liz's Portfolio</title>
-    <link href="css/style.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,600;0,700;1,600;1,700&family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet">
+    <link href="css/style 2.css" rel="stylesheet" type="text/css">
 </head>
 <body>
     <div class="header">
+        <div class="header_bar">
     <div class="logo">
-        <img src="images/logo.png">
+        <img class="logo_image" src="images/logo.png">
     </div>
     <div class="nav_text">
         <a href="#">About</a>
         <a href="#">Work</a>
         <a href="#">Other Skills</a>
         <a href="#">Contact</a>
-</div>
-</div>
-
+    </div>
 </div>
     <div class="hero_section">
-        <img height="100px" src="images/liz_headshot.png"></div>
+        <div class="hero_section_imagecontainer">
+        <img classs="hero_section_image" height="120px" src="images/liz_headshot.png">
     </div>
+    <div class="hero_section_content">
+        <h1 class="hero_section_headline">
+            UX Researcher, Designer and Writer
+        </h1>
+        <p class="hero_section_subline">
+        Both a passionate explorer of human behavior and a creative 
+        problem solver with strong foundations in qualitative 
+        research, content development and design. 
+        </p>
+    </div>
+</div>
+</div>
     <div class="main_body">
-     <div class="projects">
-        <div class="project_box"></div>
-        <div class="project_box"></div>
-        <div class="project_box"></div>
+        <div class="projects">
+          <div class="projects_container">
+            <div class="project_box">
+              <img class="project_box_image"
+              src="images/mestow_image.png" alt="">
+            </div>
+            <div class="project_box">
+              <img class="project_box_image"
+              src="images/projectcreate_image.png" alt="">
+            </div>
+            <div class="project_box">
+              <img class="project_box_image"
+              src="images/fernweh_image.png" alt="">
+            </div>
+          </div>
+        </div>
     </div>
-    </div>
+
     <div class="footer">
-        <div class="footer_left"></div>
+        <div class="footer_left">
+        <p>Copyright 2020</p></div>
         <div class="footer_center"></div>
+        
         <div class="footer_right">
             <div class="footer_text">
-                <p>Connect with Me</p>
+                <p>Connect with Me:</p>
             </div>
+            <div class="social_icons">
             <div class="email">
                 <img src="images/email_icon.png">
             </div>
             <div class="id">
             <img height="30px" src="images/id_icon.png"></div>
             <div class="li">
-            <img height="30px" src="images/linkedin_icon.png"></div>
+            <img height="30px" src="images/linkedin_icon.png">
     </div>
-   
+</div>
+</div>
+</div>
 </body>
 </html>
